--- a/estilo/style.css
+++ b/estilo/style.css
@@ -6,8 +6,22 @@
 *{margin: auto; padding: 0;}
 
 body{
-    font-family: 'Rubik Wet Paint', cursive;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     display: flex;
     flex-flow:  column nowrap;
     padding: 20px;
+}
+h2 {
+    margin-bottom: 10px;
+}
+p {
+    margin-bottom: 20px;
+}
+p input {
+    text-indent: 5px;
+}
+button{
+
+    padding: 5px;
 }
